# BE

./: .env  .gitignore  API 명세서  API 명세서.md  CONTRIBUTORS.txt  LICENSE  docker-compose.docs.yml  manage.py  pyproject.toml
config/: urls.py  (+2 more)
gaerangmari/: db.sqlite3  manage.py  ngrok.py  pyproject.toml
gaerangmari/apps/: dummy_gen.py
gaerangmari/apps/common/: exceptions.py  mixins.py  pagination.py  permissions.py  response.py  utils.py  validators.py
gaerangmari/apps/customer_services/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
gaerangmari/apps/direct_messages/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
gaerangmari/apps/friends/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
gaerangmari/apps/messages/: models.py  urls.py
gaerangmari/apps/notices/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
gaerangmari/apps/notifications/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
gaerangmari/apps/pets/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
gaerangmari/apps/posts/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
gaerangmari/apps/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py  viewsets.py
gaerangmari/apps/weathers/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
gaerangmari/config/: asgi.py  urls.py  wsgi.py
gaerangmari/config/settings/: __init__.py  base.py  local.py  production.py  test.py
gaerangmari/core/: models.py
(+102 files in other folders)
